# krakenctl-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
cli/: Cargo.toml
cli/src/: config.rs  main.rs
driver/: Cargo.toml
driver/src/: lib.rs
driver/src/devices/: kraken3.rs  mod.rs
