[package]
name = "krakenctl"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
krakenusb = { path = "../driver" }
clap = { version = "3.2.15", features = [ "derive" ] }
lm-sensors = "0.1.4"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5.9"
log = "0.4.17"
env_logger = "0.9.0"
